<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/music_select1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/music_pic1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/music_name1"
                        android:textSize="16sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/music_intro1"
                        android:textSize="12sp"
                        android:textColor="@color/gray2" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/music_select2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/music_pic2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/music_name2"
                        android:textSize="16sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/music_intro2"
                        android:textSize="12sp"
                        android:textColor="@color/gray2" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/music_select3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/music_pic3"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/music_name3"
                        android:textSize="16sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/music_intro3"
                        android:textSize="12sp"
                        android:textColor="@color/gray2" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/music_select4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/music_pic4"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/music_name4"
                        android:textSize="16sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/music_intro4"
                        android:textSize="12sp"
                        android:textColor="@color/gray2" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/music_select5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/music_pic5"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/music_name5"
                        android:textSize="16sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/music_intro5"
                        android:textSize="12sp"
                        android:textColor="@color/gray2" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/music_select6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/music_pic6"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/music_name6"
                        android:textSize="16sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/music_intro6"
                        android:textSize="12sp"
                        android:textColor="@color/gray2" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/music_select7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/music_pic7"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="10dp"
                        android:text="@string/music_name7"
                        android:textSize="16sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="@string/music_intro7"
                        android:textSize="12sp"
                        android:textColor="@color/gray2" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>






</ScrollView>