<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lag_set1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.3"
            android:text="@string/edit_title"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.7"
            android:text="编辑时间"
            android:textAlignment="viewEnd"
            android:textColor="#000" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/edit_text_style"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="start"
        android:hint="@string/edit_title_hint"
        android:textColorHint="@color/gray2"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lag_set2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.8"
            android:text="内容编辑(中文)"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />



    </LinearLayout>


    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/edit_text_style"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="start"
        android:hint="@string/edit_content_hint"
        android:textColorHint="@color/gray2"
        android:textSize="16sp" />
</LinearLayout>