<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/me_find"
        android:textSize="15dp"
        android:padding="8dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/start_notebook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/me_action_notebook"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/me_notebook"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/start_game"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/me_action_game"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/me_game"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/start_about"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/me_action_about"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/me_about"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/start_skypeech"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/me_action_skype" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="skypeech"
                android:textAlignment="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/start_instruction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/me_instruction" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="指令说明"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>